迷路の基本機能完成

--- a/ex06/maze.ipynb
+++ b/ex06/maze.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,24 +71,87 @@
     "        self.y = 9 # 迷路のyマス数\n",
     "        self.tile_length = 100 #タイルの大きさ\n",
     "\n",
-    "        self.sfc_screen = pg.display.set_mode((self.x*self.tile_length+14,self.y*self.tile_length+17))\n",
-    "        self.rct_sfc_screen = self.sfc_screen.get_rect()\n",
+    "        self.sfc = pg.display.set_mode((self.x*self.tile_length+14,self.y*self.tile_length+17))\n",
+    "        self.rct = self.sfc.get_rect()\n",
     "\n",
     "        self.wall_color = (0,100,0)\n",
     "        self.floor_color = (216,208,104)\n",
     "\n",
-    "        self.maze_map = [[rd.randint(0,1) for j in range(self.x)] for i in range(self.y)]\n",
+    "        \"\"\" self.maze_map = [[rd.randint(0,1) for j in range(self.x)] for i in range(self.y)] \"\"\"\n",
+    "        self.maze_map = self.make_maze(self.x,self.y)\n",
     "\n",
     "    def draw_map(self):\n",
-    "        self.sfc_screen.fill(self.floor_color)\n",
+    "        self.sfc.fill(self.floor_color)\n",
     "        for i in range(self.y):\n",
     "            for j in range(self.x):\n",
     "                if self.maze_map[i][j] == 1:\n",
     "                    pg.draw.rect(\n",
-    "                        self.sfc_screen,\n",
+    "                        self.sfc,\n",
     "                        color=self.wall_color,\n",
     "                        rect=(j*(self.tile_length+1),i*(self.tile_length+1),(self.tile_length-1),(self.tile_length-1)),\n",
-    "                        width=0)"
+    "                        width=0)\n",
+    "\n",
+    "    def make_maze(self,yoko, tate):\n",
+    "        XP = [ 0, 1, 0, -1]\n",
+    "        YP = [-1, 0, 1,  0]\n",
+    "\n",
+    "        maze_lst = []\n",
+    "        for y in range(tate):\n",
+    "            maze_lst.append([0]*yoko)\n",
+    "        for x in range(yoko):\n",
+    "            maze_lst[0][x] = 1\n",
+    "            maze_lst[tate-1][x] = 1\n",
+    "        for y in range(1, tate-1):\n",
+    "            maze_lst[y][0] = 1\n",
+    "            maze_lst[y][yoko-1] = 1\n",
+    "        for y in range(2, tate-2, 2):\n",
+    "            for x in range(2, yoko-2, 2):\n",
+    "                maze_lst[y][x] = 1\n",
+    "        for y in range(2, tate-2, 2):\n",
+    "            for x in range(2, yoko-2, 2):\n",
+    "                if x > 2: rnd = rd.randint(0, 2)\n",
+    "                else:     rnd = rd.randint(0, 3)\n",
+    "                maze_lst[y+YP[rnd]][x+XP[rnd]] = 1\n",
+    "\n",
+    "        return maze_lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_maze(yoko, tate):\n",
+    "    XP = [ 0, 1, 0, -1]\n",
+    "    YP = [-1, 0, 1,  0]\n",
+    "\n",
+    "    maze_lst = []\n",
+    "    for y in range(tate):\n",
+    "        maze_lst.append([0]*yoko)\n",
+    "    for x in range(yoko):\n",
+    "        maze_lst[0][x] = 1\n",
+    "        maze_lst[tate-1][x] = 1\n",
+    "    for y in range(1, tate-1):\n",
+    "        maze_lst[y][0] = 1\n",
+    "        maze_lst[y][yoko-1] = 1\n",
+    "    for y in range(2, tate-2, 2):\n",
+    "        for x in range(2, yoko-2, 2):\n",
+    "            maze_lst[y][x] = 1\n",
+    "    for y in range(2, tate-2, 2):\n",
+    "        for x in range(2, yoko-2, 2):\n",
+    "            if x > 2: rnd = rd.randint(0, 2)\n",
+    "            else:     rnd = rd.randint(0, 3)\n",
+    "            maze_lst[y+YP[rnd]][x+XP[rnd]] = 1\n",
+    "\n",
+    "    return maze_lst\n",
+    "\n",
+    "def show_maze(canvas, maze_lst):\n",
+    "    color = [\"white\", \"gray\"]\n",
+    "    for y in range(len(maze_lst)):\n",
+    "        for x in range(len(maze_lst[y])):\n",
+    "            canvas.create_rectangle(x*100, y*100, x*100+100, y*100+100, \n",
+    "                                    fill=color[maze_lst[y][x]])"
    ]
   },
   {
@@ -97,13 +160,96 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class Bird:\n",
+    "    def __init__(self, image, size, xy, scr):\n",
+    "        self.sfc = pg.image.load(image)\n",
+    "        self.sfc = pg.transform.rotozoom(self.sfc, 0, size)\n",
+    "        self.rct = self.sfc.get_rect()\n",
+    "        self.rct.center = xy\n",
+    "        self.size = size\n",
+    "\n",
+    "        self.xy = 1+1j\n",
+    "        self.tile_size = scr.tile_length\n",
+    "\n",
+    "    \"\"\" def check_bound(self,rct, scr_rct):\n",
+    "        yoko, tate = +1, +1  # 領域内\n",
+    "        if rct.left < scr_rct.left or scr_rct.right < rct.right:\n",
+    "            yoko = -1  # 領域外\n",
+    "        if rct.top < scr_rct.top or scr_rct.bottom < rct.bottom:\n",
+    "            tate = -1  # 領域外\n",
+    "        return yoko, tate \"\"\"\n",
+    "\n",
+    "    def update(self, scr):\n",
+    "\n",
+    "        tmp = self.xy\n",
+    "        key_states = pg.key.get_pressed()  # 辞書\n",
+    "        if key_states[pg.K_UP]:\n",
+    "            \"\"\" self.rct.centery -= 1 \"\"\"\n",
+    "            self.xy -= 1j\n",
+    "        if key_states[pg.K_DOWN]:\n",
+    "            \"\"\" self.rct.centery += 1 \"\"\"\n",
+    "            self.xy += 1j\n",
+    "        if key_states[pg.K_LEFT]:\n",
+    "            \"\"\" self.rct.centerx -= 1 \"\"\"\n",
+    "            self.xy -= 1\n",
+    "        if key_states[pg.K_RIGHT]:\n",
+    "            \"\"\" self.rct.centerx += 1 \"\"\"\n",
+    "            self.xy += 1\n",
+    "\n",
+    "        if scr.maze_map[int(self.xy.imag)][int(self.xy.real)] != 1:\n",
+    "            self.rct.center = (int(self.xy.real)*self.tile_size+(self.rct.size[0]//2),int(self.xy.imag)*self.tile_size+(self.rct.size[1]//2))\n",
+    "        else:\n",
+    "            self.xy = tmp\n",
+    "        # 練習7\n",
+    "        \"\"\" if self.check_bound(self.rct, scr.rct) != (1, 1):  # 領域外だったら\n",
+    "            if key_states[pg.K_UP]:\n",
+    "                self.rct.centery += 1\n",
+    "            if key_states[pg.K_DOWN]:\n",
+    "                self.rct.centery -= 1\n",
+    "            if key_states[pg.K_LEFT]:\n",
+    "                self.rct.centerx += 1\n",
+    "            if key_states[pg.K_RIGHT]:\n",
+    "                self.rct.centerx -= 1 \"\"\"\n",
+    "        scr.sfc.blit(self.sfc,self.rct)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1], [1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1], [1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1], [1, 0, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0, 0, 1], [1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1], [1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1], [1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1], [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(make_maze(16,9))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def main():\n",
     "    running = True\n",
     "    scr = Screen()\n",
+    "    kkt = Bird(\"fig/6.png\", 2.0, (900, 400),scr)\n",
+    "    clock = pg.time.Clock()\n",
+    "\n",
+    "\n",
     "    while running:\n",
     "        # ここにコードを書く\n",
     "\n",
     "        scr.draw_map()\n",
+    "        kkt.update(scr)\n",
+    "\n",
+    "        print(kkt.xy)\n",
     "        \n",
     "        # イベント処理部\n",
     "        for event in pg.event.get():\n",
@@ -112,14 +258,586 @@
     "                pg.quit()  #pygameのウィンドウを閉じる\n",
     "                sys.exit() #システム終了            \n",
     "\n",
-    "        pg.display.update() #描画処理を実行"
+    "        pg.display.update() #描画処理を実行\n",
+    "        clock.tick(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1+1j)\n",
+      "(1+1j)\n",
+      "(1+1j)\n",
+      "(1+1j)\n",
+      "(1+1j)\n",
+      "(1+1j)\n",
+      "(1+1j)\n",
+      "(1+1j)\n",
+      "(1+1j)\n",
+      "(1+1j)\n",
+      "(1+1j)\n",
+      "(1+1j)\n",
+      "(2+1j)\n",
+      "(3+1j)\n",
+      "(4+1j)\n",
+      "(4+1j)\n",
+      "(4+1j)\n",
+      "(4+1j)\n",
+      "(5+1j)\n",
+      "(5+1j)\n",
+      "(5+1j)\n",
+      "(5+1j)\n",
+      "(4+1j)\n",
+      "(3+1j)\n",
+      "(2+1j)\n",
+      "(2+1j)\n",
+      "(2+1j)\n",
+      "(2+1j)\n",
+      "(2+1j)\n",
+      "(2+1j)\n",
+      "(2+1j)\n",
+      "(2+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(4+1j)\n",
+      "(5+1j)\n",
+      "(5+1j)\n",
+      "(5+1j)\n",
+      "(5+1j)\n",
+      "(5+1j)\n",
+      "(5+1j)\n",
+      "(6+1j)\n",
+      "(6+1j)\n",
+      "(6+1j)\n",
+      "(6+1j)\n",
+      "(7+1j)\n",
+      "(8+1j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(8+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(6+1j)\n",
+      "(5+1j)\n",
+      "(5+1j)\n",
+      "(5+1j)\n",
+      "(5+1j)\n",
+      "(5+1j)\n",
+      "(4+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+2j)\n",
+      "(3+3j)\n",
+      "(3+3j)\n",
+      "(3+3j)\n",
+      "(3+3j)\n",
+      "(3+3j)\n",
+      "(3+3j)\n",
+      "(3+3j)\n",
+      "(3+3j)\n",
+      "(2+3j)\n",
+      "(2+3j)\n",
+      "(2+3j)\n",
+      "(2+3j)\n",
+      "(2+3j)\n",
+      "(2+3j)\n",
+      "(2+3j)\n",
+      "(2+3j)\n",
+      "(2+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+4j)\n",
+      "(1+5j)\n",
+      "(1+5j)\n",
+      "(1+5j)\n",
+      "(1+6j)\n",
+      "(1+7j)\n",
+      "(1+7j)\n",
+      "(1+7j)\n",
+      "(1+7j)\n",
+      "(1+7j)\n",
+      "(1+7j)\n",
+      "(1+7j)\n",
+      "(1+7j)\n",
+      "(2+7j)\n",
+      "(3+7j)\n",
+      "(3+7j)\n",
+      "(3+7j)\n",
+      "(3+7j)\n",
+      "(4+7j)\n",
+      "(5+7j)\n",
+      "(5+7j)\n",
+      "(5+7j)\n",
+      "(5+7j)\n",
+      "(5+7j)\n",
+      "(5+7j)\n",
+      "(5+7j)\n",
+      "(5+6j)\n",
+      "(5+5j)\n",
+      "(5+5j)\n",
+      "(5+5j)\n",
+      "(5+5j)\n",
+      "(5+5j)\n",
+      "(5+5j)\n",
+      "(5+5j)\n",
+      "(5+6j)\n",
+      "(5+7j)\n",
+      "(5+7j)\n",
+      "(5+7j)\n",
+      "(5+7j)\n",
+      "(5+7j)\n",
+      "(5+7j)\n",
+      "(4+7j)\n",
+      "(3+7j)\n",
+      "(2+7j)\n",
+      "(1+7j)\n",
+      "(1+7j)\n",
+      "(1+7j)\n",
+      "(1+7j)\n",
+      "(1+6j)\n",
+      "(1+5j)\n",
+      "(1+4j)\n",
+      "(1+4j)\n",
+      "(1+4j)\n",
+      "(1+4j)\n",
+      "(1+4j)\n",
+      "(1+4j)\n",
+      "(1+4j)\n",
+      "(1+4j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(2+3j)\n",
+      "(3+3j)\n",
+      "(3+3j)\n",
+      "(3+3j)\n",
+      "(3+3j)\n",
+      "(3+3j)\n",
+      "(3+2j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(4+1j)\n",
+      "(5+1j)\n",
+      "(5+1j)\n",
+      "(5+1j)\n",
+      "(5+1j)\n",
+      "(5+1j)\n",
+      "(6+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(7+2j)\n",
+      "(7+3j)\n",
+      "(7+4j)\n",
+      "(7+4j)\n",
+      "(7+4j)\n",
+      "(7+4j)\n",
+      "(7+5j)\n",
+      "(7+6j)\n",
+      "(7+6j)\n",
+      "(7+6j)\n",
+      "(7+6j)\n",
+      "(7+6j)\n",
+      "(7+6j)\n",
+      "(7+6j)\n",
+      "(7+6j)\n",
+      "(7+6j)\n",
+      "(7+7j)\n",
+      "(7+7j)\n",
+      "(7+7j)\n",
+      "(7+7j)\n",
+      "(8+7j)\n",
+      "(9+7j)\n",
+      "(9+7j)\n",
+      "(9+7j)\n",
+      "(9+7j)\n",
+      "(10+7j)\n",
+      "(11+7j)\n",
+      "(11+7j)\n",
+      "(11+7j)\n",
+      "(12+7j)\n",
+      "(13+7j)\n",
+      "(13+7j)\n",
+      "(13+7j)\n",
+      "(14+7j)\n",
+      "(14+7j)\n",
+      "(14+7j)\n",
+      "(14+7j)\n",
+      "(14+7j)\n",
+      "(14+7j)\n",
+      "(14+7j)\n",
+      "(14+6j)\n",
+      "(14+5j)\n",
+      "(14+5j)\n",
+      "(14+5j)\n",
+      "(14+4j)\n",
+      "(14+3j)\n",
+      "(14+3j)\n",
+      "(14+3j)\n",
+      "(14+3j)\n",
+      "(14+2j)\n",
+      "(14+2j)\n",
+      "(14+2j)\n",
+      "(14+2j)\n",
+      "(14+2j)\n",
+      "(14+2j)\n",
+      "(14+1j)\n",
+      "(14+1j)\n",
+      "(14+1j)\n",
+      "(14+1j)\n",
+      "(14+1j)\n",
+      "(14+1j)\n",
+      "(13+1j)\n",
+      "(13+1j)\n",
+      "(13+1j)\n",
+      "(13+1j)\n",
+      "(13+1j)\n",
+      "(13+1j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+3j)\n",
+      "(13+3j)\n",
+      "(13+3j)\n",
+      "(13+3j)\n",
+      "(13+3j)\n",
+      "(13+3j)\n",
+      "(13+3j)\n",
+      "(13+3j)\n",
+      "(13+3j)\n",
+      "(13+3j)\n",
+      "(12+3j)\n",
+      "(11+3j)\n",
+      "(11+3j)\n",
+      "(11+3j)\n",
+      "(11+3j)\n",
+      "(10+3j)\n",
+      "(9+3j)\n",
+      "(9+3j)\n",
+      "(9+3j)\n",
+      "(9+3j)\n",
+      "(9+3j)\n",
+      "(9+3j)\n",
+      "(9+3j)\n",
+      "(9+2j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(8+1j)\n",
+      "(7+1j)\n",
+      "(6+1j)\n",
+      "(6+1j)\n",
+      "(6+1j)\n",
+      "(6+1j)\n",
+      "(6+1j)\n",
+      "(6+1j)\n",
+      "(6+1j)\n",
+      "(6+1j)\n",
+      "(6+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(7+2j)\n",
+      "(7+3j)\n",
+      "(7+3j)\n",
+      "(7+3j)\n",
+      "(7+3j)\n",
+      "(7+4j)\n",
+      "(7+5j)\n",
+      "(7+5j)\n",
+      "(7+5j)\n",
+      "(7+5j)\n",
+      "(7+6j)\n",
+      "(7+6j)\n",
+      "(7+6j)\n",
+      "(7+6j)\n",
+      "(7+6j)\n",
+      "(7+6j)\n",
+      "(7+6j)\n",
+      "(7+6j)\n",
+      "(7+7j)\n",
+      "(7+7j)\n",
+      "(7+7j)\n",
+      "(7+7j)\n",
+      "(8+7j)\n",
+      "(9+7j)\n",
+      "(9+7j)\n",
+      "(9+7j)\n",
+      "(10+7j)\n",
+      "(11+7j)\n",
+      "(11+7j)\n",
+      "(11+7j)\n",
+      "(12+7j)\n",
+      "(12+7j)\n",
+      "(12+7j)\n",
+      "(13+7j)\n",
+      "(14+7j)\n",
+      "(14+7j)\n",
+      "(14+7j)\n",
+      "(14+7j)\n",
+      "(14+7j)\n",
+      "(14+7j)\n",
+      "(14+7j)\n",
+      "(14+6j)\n",
+      "(14+5j)\n",
+      "(14+5j)\n",
+      "(14+5j)\n",
+      "(14+4j)\n",
+      "(14+3j)\n",
+      "(14+3j)\n",
+      "(14+3j)\n",
+      "(14+2j)\n",
+      "(14+1j)\n",
+      "(14+1j)\n",
+      "(14+1j)\n",
+      "(14+1j)\n",
+      "(14+1j)\n",
+      "(14+1j)\n",
+      "(14+1j)\n",
+      "(14+1j)\n",
+      "(13+1j)\n",
+      "(13+1j)\n",
+      "(13+1j)\n",
+      "(13+1j)\n",
+      "(13+1j)\n",
+      "(13+1j)\n",
+      "(13+2j)\n",
+      "(13+3j)\n",
+      "(13+3j)\n",
+      "(13+3j)\n",
+      "(13+4j)\n",
+      "(13+5j)\n",
+      "(13+5j)\n",
+      "(13+5j)\n",
+      "(13+5j)\n",
+      "(13+5j)\n",
+      "(13+5j)\n",
+      "(13+4j)\n",
+      "(13+3j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+3j)\n",
+      "(13+4j)\n",
+      "(13+4j)\n",
+      "(13+4j)\n",
+      "(13+4j)\n",
+      "(13+4j)\n",
+      "(13+4j)\n",
+      "(13+4j)\n",
+      "(13+4j)\n",
+      "(13+3j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+3j)\n",
+      "(13+4j)\n",
+      "(13+4j)\n",
+      "(13+4j)\n",
+      "(13+4j)\n",
+      "(13+4j)\n",
+      "(13+4j)\n",
+      "(13+4j)\n",
+      "(13+4j)\n",
+      "(13+3j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+2j)\n",
+      "(13+3j)\n",
+      "(13+3j)\n",
+      "(13+3j)\n",
+      "(13+3j)\n",
+      "(13+3j)\n",
+      "(13+3j)\n",
+      "(13+3j)\n",
+      "(13+3j)\n",
+      "(13+3j)\n",
+      "(12+3j)\n",
+      "(11+3j)\n",
+      "(11+3j)\n",
+      "(11+3j)\n",
+      "(11+3j)\n",
+      "(11+3j)\n",
+      "(11+3j)\n",
+      "(10+3j)\n",
+      "(9+3j)\n",
+      "(9+3j)\n",
+      "(9+3j)\n",
+      "(9+3j)\n",
+      "(9+3j)\n",
+      "(9+3j)\n",
+      "(9+3j)\n",
+      "(9+3j)\n",
+      "(9+2j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(9+1j)\n",
+      "(8+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(7+1j)\n",
+      "(6+1j)\n",
+      "(5+1j)\n",
+      "(5+1j)\n",
+      "(5+1j)\n",
+      "(4+1j)\n",
+      "(4+1j)\n",
+      "(4+1j)\n",
+      "(4+1j)\n",
+      "(4+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+1j)\n",
+      "(3+2j)\n",
+      "(3+3j)\n",
+      "(3+3j)\n",
+      "(3+3j)\n",
+      "(3+3j)\n",
+      "(3+3j)\n",
+      "(3+3j)\n",
+      "(3+3j)\n",
+      "(3+3j)\n",
+      "(3+3j)\n",
+      "(3+3j)\n",
+      "(2+3j)\n",
+      "(2+3j)\n",
+      "(2+3j)\n",
+      "(2+3j)\n",
+      "(2+3j)\n",
+      "(2+3j)\n",
+      "(2+3j)\n",
+      "(2+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n",
+      "(1+3j)\n"
+     ]
+    },
     {
      "ename": "SystemExit",
      "evalue": "",
