迷路の自動再生成

--- a/ex06/maze.ipynb
+++ b/ex06/maze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,8 +74,12 @@
     "        self.sfc = pg.display.set_mode((self.x*self.tile_length+14,self.y*self.tile_length+17))\n",
     "        self.rct = self.sfc.get_rect()\n",
     "\n",
+    "        self.start_color = (0,0,255)\n",
+    "\n",
     "        self.wall_color = (0,100,0)\n",
     "        self.floor_color = (216,208,104)\n",
+    "\n",
+    "        self.goal_color = (255,0,0)\n",
     "\n",
     "        \"\"\" self.maze_map = [[rd.randint(0,1) for j in range(self.x)] for i in range(self.y)] \"\"\"\n",
     "        self.maze_map = self.make_maze(self.x,self.y)\n",
@@ -85,10 +89,24 @@
     "        for i in range(self.y):\n",
     "            for j in range(self.x):\n",
     "                if self.maze_map[i][j] == 1:\n",
+    "                    color = self.wall_color\n",
+    "                    \"\"\" if i==1 and j==1 : color = self.start_color\n",
+    "                    elif i==self.y-2 and j==self.x-2: color = self.goal_color\n",
+    "                    print(color) \"\"\"\n",
     "                    pg.draw.rect(\n",
-    "                        self.sfc,\n",
-    "                        color=self.wall_color,\n",
+    "                        surface=self.sfc,\n",
+    "                        color=color,\n",
     "                        rect=(j*(self.tile_length+1),i*(self.tile_length+1),(self.tile_length-1),(self.tile_length-1)),\n",
+    "                        width=0)\n",
+    "                    pg.draw.rect(\n",
+    "                        surface=self.sfc,\n",
+    "                        color=self.start_color,\n",
+    "                        rect=(1*(self.tile_length+1),1*(self.tile_length+1),(self.tile_length-1),(self.tile_length-1)),\n",
+    "                        width=0)\n",
+    "                    pg.draw.rect(\n",
+    "                        surface=self.sfc,\n",
+    "                        color=self.goal_color,\n",
+    "                        rect=((self.x-2)*(self.tile_length+1),(self.y-2)*(self.tile_length+1),(self.tile_length-1),(self.tile_length-1)),\n",
     "                        width=0)\n",
     "\n",
     "    def make_maze(self,yoko, tate):\n",
@@ -113,12 +131,15 @@
     "                else:     rnd = rd.randint(0, 3)\n",
     "                maze_lst[y+YP[rnd]][x+XP[rnd]] = 1\n",
     "\n",
-    "        return maze_lst"
+    "        return maze_lst\n",
+    "\n",
+    "    def reset_maze(self):\n",
+    "        self.maze_map = self.make_maze(self.x,self.y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,8 +189,10 @@
     "        self.rct.center = xy\n",
     "        self.size = size\n",
     "\n",
+    "        self.scr = scr\n",
+    "\n",
     "        self.xy = 1+1j\n",
-    "        self.tile_size = scr.tile_length\n",
+    "        self.tile_size = self.scr.tile_length\n",
     "\n",
     "    \"\"\" def check_bound(self,rct, scr_rct):\n",
     "        yoko, tate = +1, +1  # 領域内\n",
@@ -200,6 +223,11 @@
     "            self.rct.center = (int(self.xy.real)*self.tile_size+(self.rct.size[0]//2),int(self.xy.imag)*self.tile_size+(self.rct.size[1]//2))\n",
     "        else:\n",
     "            self.xy = tmp\n",
+    "\n",
+    "        if self.xy == complex(self.scr.x-2,self.scr.y-2):\n",
+    "            self.scr.reset_maze()\n",
+    "            self.xy = 1+1j\n",
+    "            self.rct.center = (int(self.xy.real)*self.tile_size+(self.rct.size[0]//2),int(self.xy.imag)*self.tile_size+(self.rct.size[1]//2))\n",
     "        # 練習7\n",
     "        \"\"\" if self.check_bound(self.rct, scr.rct) != (1, 1):  # 領域外だったら\n",
     "            if key_states[pg.K_UP]:\n",
@@ -215,14 +243,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1], [1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1], [1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1], [1, 0, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0, 0, 1], [1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1], [1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1], [1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1], [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]\n"
+      "[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], [1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1], [1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1], [1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1], [1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1], [1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1], [1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 1], [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1], [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]\n"
      ]
     }
    ],
@@ -232,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,8 +276,6 @@
     "\n",
     "        scr.draw_map()\n",
     "        kkt.update(scr)\n",
-    "\n",
-    "        print(kkt.xy)\n",
     "        \n",
     "        # イベント処理部\n",
     "        for event in pg.event.get():\n",
@@ -264,580 +290,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1+1j)\n",
-      "(1+1j)\n",
-      "(1+1j)\n",
-      "(1+1j)\n",
-      "(1+1j)\n",
-      "(1+1j)\n",
-      "(1+1j)\n",
-      "(1+1j)\n",
-      "(1+1j)\n",
-      "(1+1j)\n",
-      "(1+1j)\n",
-      "(1+1j)\n",
-      "(2+1j)\n",
-      "(3+1j)\n",
-      "(4+1j)\n",
-      "(4+1j)\n",
-      "(4+1j)\n",
-      "(4+1j)\n",
-      "(5+1j)\n",
-      "(5+1j)\n",
-      "(5+1j)\n",
-      "(5+1j)\n",
-      "(4+1j)\n",
-      "(3+1j)\n",
-      "(2+1j)\n",
-      "(2+1j)\n",
-      "(2+1j)\n",
-      "(2+1j)\n",
-      "(2+1j)\n",
-      "(2+1j)\n",
-      "(2+1j)\n",
-      "(2+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(4+1j)\n",
-      "(5+1j)\n",
-      "(5+1j)\n",
-      "(5+1j)\n",
-      "(5+1j)\n",
-      "(5+1j)\n",
-      "(5+1j)\n",
-      "(6+1j)\n",
-      "(6+1j)\n",
-      "(6+1j)\n",
-      "(6+1j)\n",
-      "(7+1j)\n",
-      "(8+1j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(8+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(6+1j)\n",
-      "(5+1j)\n",
-      "(5+1j)\n",
-      "(5+1j)\n",
-      "(5+1j)\n",
-      "(5+1j)\n",
-      "(4+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+2j)\n",
-      "(3+3j)\n",
-      "(3+3j)\n",
-      "(3+3j)\n",
-      "(3+3j)\n",
-      "(3+3j)\n",
-      "(3+3j)\n",
-      "(3+3j)\n",
-      "(3+3j)\n",
-      "(2+3j)\n",
-      "(2+3j)\n",
-      "(2+3j)\n",
-      "(2+3j)\n",
-      "(2+3j)\n",
-      "(2+3j)\n",
-      "(2+3j)\n",
-      "(2+3j)\n",
-      "(2+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+4j)\n",
-      "(1+5j)\n",
-      "(1+5j)\n",
-      "(1+5j)\n",
-      "(1+6j)\n",
-      "(1+7j)\n",
-      "(1+7j)\n",
-      "(1+7j)\n",
-      "(1+7j)\n",
-      "(1+7j)\n",
-      "(1+7j)\n",
-      "(1+7j)\n",
-      "(1+7j)\n",
-      "(2+7j)\n",
-      "(3+7j)\n",
-      "(3+7j)\n",
-      "(3+7j)\n",
-      "(3+7j)\n",
-      "(4+7j)\n",
-      "(5+7j)\n",
-      "(5+7j)\n",
-      "(5+7j)\n",
-      "(5+7j)\n",
-      "(5+7j)\n",
-      "(5+7j)\n",
-      "(5+7j)\n",
-      "(5+6j)\n",
-      "(5+5j)\n",
-      "(5+5j)\n",
-      "(5+5j)\n",
-      "(5+5j)\n",
-      "(5+5j)\n",
-      "(5+5j)\n",
-      "(5+5j)\n",
-      "(5+6j)\n",
-      "(5+7j)\n",
-      "(5+7j)\n",
-      "(5+7j)\n",
-      "(5+7j)\n",
-      "(5+7j)\n",
-      "(5+7j)\n",
-      "(4+7j)\n",
-      "(3+7j)\n",
-      "(2+7j)\n",
-      "(1+7j)\n",
-      "(1+7j)\n",
-      "(1+7j)\n",
-      "(1+7j)\n",
-      "(1+6j)\n",
-      "(1+5j)\n",
-      "(1+4j)\n",
-      "(1+4j)\n",
-      "(1+4j)\n",
-      "(1+4j)\n",
-      "(1+4j)\n",
-      "(1+4j)\n",
-      "(1+4j)\n",
-      "(1+4j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(2+3j)\n",
-      "(3+3j)\n",
-      "(3+3j)\n",
-      "(3+3j)\n",
-      "(3+3j)\n",
-      "(3+3j)\n",
-      "(3+2j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(4+1j)\n",
-      "(5+1j)\n",
-      "(5+1j)\n",
-      "(5+1j)\n",
-      "(5+1j)\n",
-      "(5+1j)\n",
-      "(6+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(7+2j)\n",
-      "(7+3j)\n",
-      "(7+4j)\n",
-      "(7+4j)\n",
-      "(7+4j)\n",
-      "(7+4j)\n",
-      "(7+5j)\n",
-      "(7+6j)\n",
-      "(7+6j)\n",
-      "(7+6j)\n",
-      "(7+6j)\n",
-      "(7+6j)\n",
-      "(7+6j)\n",
-      "(7+6j)\n",
-      "(7+6j)\n",
-      "(7+6j)\n",
-      "(7+7j)\n",
-      "(7+7j)\n",
-      "(7+7j)\n",
-      "(7+7j)\n",
-      "(8+7j)\n",
-      "(9+7j)\n",
-      "(9+7j)\n",
-      "(9+7j)\n",
-      "(9+7j)\n",
-      "(10+7j)\n",
-      "(11+7j)\n",
-      "(11+7j)\n",
-      "(11+7j)\n",
-      "(12+7j)\n",
-      "(13+7j)\n",
-      "(13+7j)\n",
-      "(13+7j)\n",
-      "(14+7j)\n",
-      "(14+7j)\n",
-      "(14+7j)\n",
-      "(14+7j)\n",
-      "(14+7j)\n",
-      "(14+7j)\n",
-      "(14+7j)\n",
-      "(14+6j)\n",
-      "(14+5j)\n",
-      "(14+5j)\n",
-      "(14+5j)\n",
-      "(14+4j)\n",
-      "(14+3j)\n",
-      "(14+3j)\n",
-      "(14+3j)\n",
-      "(14+3j)\n",
-      "(14+2j)\n",
-      "(14+2j)\n",
-      "(14+2j)\n",
-      "(14+2j)\n",
-      "(14+2j)\n",
-      "(14+2j)\n",
-      "(14+1j)\n",
-      "(14+1j)\n",
-      "(14+1j)\n",
-      "(14+1j)\n",
-      "(14+1j)\n",
-      "(14+1j)\n",
-      "(13+1j)\n",
-      "(13+1j)\n",
-      "(13+1j)\n",
-      "(13+1j)\n",
-      "(13+1j)\n",
-      "(13+1j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+3j)\n",
-      "(13+3j)\n",
-      "(13+3j)\n",
-      "(13+3j)\n",
-      "(13+3j)\n",
-      "(13+3j)\n",
-      "(13+3j)\n",
-      "(13+3j)\n",
-      "(13+3j)\n",
-      "(13+3j)\n",
-      "(12+3j)\n",
-      "(11+3j)\n",
-      "(11+3j)\n",
-      "(11+3j)\n",
-      "(11+3j)\n",
-      "(10+3j)\n",
-      "(9+3j)\n",
-      "(9+3j)\n",
-      "(9+3j)\n",
-      "(9+3j)\n",
-      "(9+3j)\n",
-      "(9+3j)\n",
-      "(9+3j)\n",
-      "(9+2j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(8+1j)\n",
-      "(7+1j)\n",
-      "(6+1j)\n",
-      "(6+1j)\n",
-      "(6+1j)\n",
-      "(6+1j)\n",
-      "(6+1j)\n",
-      "(6+1j)\n",
-      "(6+1j)\n",
-      "(6+1j)\n",
-      "(6+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(7+2j)\n",
-      "(7+3j)\n",
-      "(7+3j)\n",
-      "(7+3j)\n",
-      "(7+3j)\n",
-      "(7+4j)\n",
-      "(7+5j)\n",
-      "(7+5j)\n",
-      "(7+5j)\n",
-      "(7+5j)\n",
-      "(7+6j)\n",
-      "(7+6j)\n",
-      "(7+6j)\n",
-      "(7+6j)\n",
-      "(7+6j)\n",
-      "(7+6j)\n",
-      "(7+6j)\n",
-      "(7+6j)\n",
-      "(7+7j)\n",
-      "(7+7j)\n",
-      "(7+7j)\n",
-      "(7+7j)\n",
-      "(8+7j)\n",
-      "(9+7j)\n",
-      "(9+7j)\n",
-      "(9+7j)\n",
-      "(10+7j)\n",
-      "(11+7j)\n",
-      "(11+7j)\n",
-      "(11+7j)\n",
-      "(12+7j)\n",
-      "(12+7j)\n",
-      "(12+7j)\n",
-      "(13+7j)\n",
-      "(14+7j)\n",
-      "(14+7j)\n",
-      "(14+7j)\n",
-      "(14+7j)\n",
-      "(14+7j)\n",
-      "(14+7j)\n",
-      "(14+7j)\n",
-      "(14+6j)\n",
-      "(14+5j)\n",
-      "(14+5j)\n",
-      "(14+5j)\n",
-      "(14+4j)\n",
-      "(14+3j)\n",
-      "(14+3j)\n",
-      "(14+3j)\n",
-      "(14+2j)\n",
-      "(14+1j)\n",
-      "(14+1j)\n",
-      "(14+1j)\n",
-      "(14+1j)\n",
-      "(14+1j)\n",
-      "(14+1j)\n",
-      "(14+1j)\n",
-      "(14+1j)\n",
-      "(13+1j)\n",
-      "(13+1j)\n",
-      "(13+1j)\n",
-      "(13+1j)\n",
-      "(13+1j)\n",
-      "(13+1j)\n",
-      "(13+2j)\n",
-      "(13+3j)\n",
-      "(13+3j)\n",
-      "(13+3j)\n",
-      "(13+4j)\n",
-      "(13+5j)\n",
-      "(13+5j)\n",
-      "(13+5j)\n",
-      "(13+5j)\n",
-      "(13+5j)\n",
-      "(13+5j)\n",
-      "(13+4j)\n",
-      "(13+3j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+3j)\n",
-      "(13+4j)\n",
-      "(13+4j)\n",
-      "(13+4j)\n",
-      "(13+4j)\n",
-      "(13+4j)\n",
-      "(13+4j)\n",
-      "(13+4j)\n",
-      "(13+4j)\n",
-      "(13+3j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+3j)\n",
-      "(13+4j)\n",
-      "(13+4j)\n",
-      "(13+4j)\n",
-      "(13+4j)\n",
-      "(13+4j)\n",
-      "(13+4j)\n",
-      "(13+4j)\n",
-      "(13+4j)\n",
-      "(13+3j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+2j)\n",
-      "(13+3j)\n",
-      "(13+3j)\n",
-      "(13+3j)\n",
-      "(13+3j)\n",
-      "(13+3j)\n",
-      "(13+3j)\n",
-      "(13+3j)\n",
-      "(13+3j)\n",
-      "(13+3j)\n",
-      "(12+3j)\n",
-      "(11+3j)\n",
-      "(11+3j)\n",
-      "(11+3j)\n",
-      "(11+3j)\n",
-      "(11+3j)\n",
-      "(11+3j)\n",
-      "(10+3j)\n",
-      "(9+3j)\n",
-      "(9+3j)\n",
-      "(9+3j)\n",
-      "(9+3j)\n",
-      "(9+3j)\n",
-      "(9+3j)\n",
-      "(9+3j)\n",
-      "(9+3j)\n",
-      "(9+2j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(9+1j)\n",
-      "(8+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(7+1j)\n",
-      "(6+1j)\n",
-      "(5+1j)\n",
-      "(5+1j)\n",
-      "(5+1j)\n",
-      "(4+1j)\n",
-      "(4+1j)\n",
-      "(4+1j)\n",
-      "(4+1j)\n",
-      "(4+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+1j)\n",
-      "(3+2j)\n",
-      "(3+3j)\n",
-      "(3+3j)\n",
-      "(3+3j)\n",
-      "(3+3j)\n",
-      "(3+3j)\n",
-      "(3+3j)\n",
-      "(3+3j)\n",
-      "(3+3j)\n",
-      "(3+3j)\n",
-      "(3+3j)\n",
-      "(2+3j)\n",
-      "(2+3j)\n",
-      "(2+3j)\n",
-      "(2+3j)\n",
-      "(2+3j)\n",
-      "(2+3j)\n",
-      "(2+3j)\n",
-      "(2+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n"
-     ]
-    },
     {
      "ename": "SystemExit",
      "evalue": "",
@@ -845,6 +300,14 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[0;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/koya/.virtualenvs/main/lib/python3.10/site-packages/IPython/core/interactiveshell.py:3406: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
